<resources>
    <string name="app_name">Čačak Tour Guide</string>
    <string name="category_welcome">Click here to start Čačak Tour Guide App</string>
    <string name="category_about">About Čačak </string>
    <string name="category_sighseeing">Sighseeing places</string>
    <string name="category_places">Accommodation</string>
    <string name="category_cafes"> Cafes and restaurants</string>
    <string name="category_galery">Gallery</string>
    <string name="category_phones">Useful phones</string>
    <string name="title_activity_scrolling">Top informations </string>
    <string name="category_top">Čacak top information</string>
    <string name="category_geography">Geography</string>
    <string name="category_history">History</string>
    <string name="category_settlements">Settlements</string>
    <string name="category_society">Society</string>
    <string name="category_people">Important people</string>
    <string name="large_text">
        "Cacak \n\n"
        </string>
    <string name="large_text1">

       "Cacak is a city that is recognizable by preserved architecture, with elements of modern construction, as well as preserved ambient units. One of the largest cities in Serbia, the city of Čačak has undergone several stages in its development. Each of these periods features rich monumental heritage and speaks of the city's life during the centuries-old history.
        Cacak is a city of sports with a large number of sports clubs. There are numerous sports fields and facilities in the city and its surroundings where sports and recreational activities can be organized. Of course, there is the West Morava River which attracts more and more visitors with its contents. Only a few kilometers from Cacak are spas, villages, monasteries, cultural and historical monuments. Beautiful nature in Ovčarsko-Kablarska gorge, Ovčar and Kablar mountains, lakes and meanders of the Western Morava, rich flora and fauna are the reason why if you are staying in Čačak, you go on a trip to these interesting places. In the area of ​​the city and the environment, events in the field of culture are organized: "Spring of Dis", "Memorial Nadezda Petrović", biennials "Biennial of visual arts of the Balkans", "Days of photography in Serbia".
        In the village Prislonica near Cacak, the Serbian Frulas Party is organized, the competition of the best Serbian frulas,a manifestation that fosters tradition and original folk creation. A large number of catering facilities are located in this city and this is one of the characteristics of a very diverse tourist offer. Countless summer gardens in the city and on the banks of the West Morava River attract a large number of visitors who want to spend pleasant moments with family and friends. Numerous specialties of Serbian cuisine are found in the offer of restaurants in Cacak. The impressions of domestic and foreign guests are a sufficient invitation for new visitors to get acquainted with the famous specialties of the region of Cacak. The valuable monument heritage and natural beauties around the city make Cacak a recognizable tourist destination in Serbia. Culture and tumultuous history of the city are preserved in the traces of civilizations that inhabited this city and its surroundings."
    </string>
    <string name="riot">

        "Mark of Hadzi Prodan's riot\n\n"
        "The Hadzi-Prodan's monument is located in the southern part of the church port in Trnava. It was built of white marble in the form of a developed flag with a cross on the top. On the monument are relief group figures on the move. At the head of the group is the igman Pajsija, behind him Hadži-Prodan with the insurrections in a somewhat shallow relief.
        The author of the monument is Leposav Milošević-Sibinović, an academic sculptor from Belgrade."
    </string>
    <string name="riot2">
        "Mark of Hadzi Prodan's riot in church of village Trnava near Cacak"
    </string>
    <string name="riot3">
        "Hadzi Prodan Gligorijevic drawing I.Uhlika, 1953"
    </string>
<string name="gorge2">

    "Monastery Blagovestenje\n\n"
    "The Blagovestenje Monastery is located on a gentle hill above the settlement of Ovčar Banja.
    This is one of the few monasteries in Ovčarsko-Kablarska gorge, which is known exactly when it was built and who were the knights.
    The inscription above the entrance to the church says that the temple was erected 1601/02. The temple was built in the architectural style of
    Raska and its architecture is after the monastery of Sv. Three, the most beautiful monastery in Ovčarsko-Kablarska gorge.
    The monastery has one of the oldest books, the Blagoveshchenski Gospel, founded in 1372. In its treasury, it also keeps a printed four-legend dating back to 1552. Patriarch Pavle was once minted in him."

 </string>
    <string name="gorge3">

"Monastery Ilinje\n\n"
"The monastery of Ilinje is located above the monastery Blagovesti. There are no data on when it was created or who built this monastery. Since it is near the monastery Blessing, it is presumed that the Blessed monks raised it as their target. The present monastery was built in 1938 on the foundations of the old monastery."
</string>
<string name="gorge4">

"Monastery Jovanje\n\n"
"The monastery Jovanje is located on the left bank of the West Morava River, at its largest meander. No one can say with certainty who and when he built Jovanje. The old church dedicated to St. John was flooded in 1954 when building a hydroelectric power plant. The numerous devastation and ruin that this monastery suffered, completely destroyed almost all the traces of the original monastery. Thus, the treasure of a once-great temple disappeared. The most valuable items in the treasury are the two ceilings of the icons from 1850.
    Today's monastery Jovanje is designed to combine old and new patterns in sacral architecture, giving a whole new achievement to the whole Ovčarsko-Kablarska Monastery."

 </string>
    <string name="gorge5">
"Kađenica\n\n"
"On the right bank of the West Morava, a kilometer upstream from Ovčar Banja, there is the cave Kađenica. The access to the cave is arranged, and the main hall, with a sign of cave jewelry, is at the same time a sacral and monumental space. Two stone sarcophagus and Christ's crucifix mark a miraculous event from the time of Hadzi-Prodan's rebellion in 1814. In the cave, in those bloody times, the confusion of people from the surrounding villages was hidden. The Turks discovered them, they stacked branches and storms and set fire to the entrance. All the people smothered the bathtub, i.e. smoke. Since then, this place has been called Cadjenica."
</string>
    <string name="gorge6">
 

"Monastery Nikolje\n\n"
"The monastery Nikolje, the oldest church among Ovčarsko-Kablar monasteries, was erected on the slopes of Kablar, on the left bank of the Western Morava. Based on architectural characteristics, it is assumed that it originates from the Middle Ages, most likely the end of the 14th or the beginning of the 15th century. The most important handwritten book in Serbian culture written at the beginning of the 17th century, the Karan Gospel, is kept in the monastery of Nikolje.

There used to be up to 300 monks in Nikko. Milos Obrenovic and his family were hiding from the Turks. In the port of 1817, he built a conak that still exists and bears his name."

 </string>
    <string name="gorge8">

"Savinje\n\n"
    "The bottom of the steepest cliffs of the Kablar, in the rocky recess, springs water. It is believed that water, called Savina, is treating vision and headache. Near the spring of 1938, a small church was erected under the wall. In her about the holidays, the monks perform the worship of the monastery of the Transfiguration."

 </string>
    <string name="gorge9">

"Sretenje\n\n"
"The Sretenje Monastery is located in an exceptional natural setting, on the plateau below the Ovčara peak. Based on previous research it is believed that the monastery was built in the 16th century and on several occasions during the past times it was demolished and burnt. It was restored only in the 19th century, thanks to the monk, and later to the bishop Nikifor Maksimovic. From the manuscripts preserved to this day in Sretenje, there are only three: Gospel, the canon of the Virgin and Mine for June, which is significant because it contains the service of the Duke of Lazarus as the work of our church literature. From the treasury forged objects and antiques, marble baptistery and roses from the 17th century and the icon of the Most Holy Theotokos from the 18th century are preserved."
</string>
    <string name="gorge10">

    "Monastery Sv. Trinity\n\n"
"Church of the monastery of Sv. By its architecture, the Trinity is the most beautiful temple in Ovčarsko-Kablarska gorge, located on the southwestern wooded slopes of Ovčara. It was not established who and when he built the monastery. Based on previous knowledge that relies on Turkish lists, this monastery originates from the second half of the 16th century. This monastery suffered the sufferings at the end of the 17th century, as did other monasteries in Serbia. In the monastery of Sv. The Trinity is one large, prestigious gold and a heart embroidered with a cross of great artistic value. In addition to this cross, in the monastery of Sv. The Trinity contains two unique rare icons - the Savior and the Virgin - from the ancient value."

 </string>
    <string name="gorge11">

"Uspenje\n\n"
"At the elevation above the monastery Jovanje, there is the monastery Dawn which is visible from all sides of the gorge. It is mentioned in Turkish sources in 1536. It is dedicated to the Ascension of the Most Holy Theotokos. At this point there used to be a tower with a bell tower about 30 meters high. It is assumed that the tower was destroyed by the Turks at the same time as Jovanje. Bishop Nikolai found only ruins in this place. According to his wishes, a new church of the Uspenja Monastery was built, in 1939, as a faithful copy of the church of Sv. Emperor Constantine and Jelena in Ohrid. The original iconostasis was destroyed by Bulgarians in 1943. The monastery was re-established in 1998, and in 2004 it was inhabited by nuns.

The monastery temple has several features that are rarely seen in other Serbian Orthodox churches. The church of the monastery of Uspenja has very small windows with a narrow rectangular shape, without any decoration. The church was never painted. In the monastery temple there are actually two churches that have, one, a common entrance. The left part of the temple is dedicated to the Ascension of the Most Holy Mother of God, and to the Right of the Seven Episcopal Martyrs."

 </string>
    <string name="gorge12">

"Monastery Vavedenje\n\n"
The Vavedenje Monastery was erected at the very beginning of the gorge. The stylistic characteristics of the original parts of the temple indicate that this monastery was built in the 16th century. The iconostasis of the monastery Vavedenje consist, among others, of the icon of Nikola Apostolović the Virgin with Christ and Jesus Christ. The imperial doors of the Blessed One are also preserved. The modest artistic unit that makes the iconostasis of this monastery complement the icons that have remained preserved.
</string>
    <string name="gorge13">
"Monastery Vaznesenje\n\n"
"The Vaznesenje Monastery was erected on the northern slopes of Ovčara. Thanks to one handwritten gospel, written in Vaznesenje in 1570, we are sure that the monastery existed in the 16th century. The monastery probably suffered, like most other monasteries in the gorge, during the Great Empire in 1690. After more unsuccessful attempts at renewal, only in the thirties of the 20th century, Bishop Nikolai Velimirovic began the reconstruction of this monastery."
</string>
</resources>